<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.comp319.okd.libook.BookOptionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/hourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <TextView
            android:text="@string/sym_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Spinner
            android:id="@+id/minuteSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <TextView
            android:text="@string/sym_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:id="@+id/camera_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photoTitle"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/camera"
            android:contentDescription="@string/captureStr"
            android:onClick="capture"/>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/preview"
            android:contentDescription="@string/displayStr"
            android:onClick="display"/>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bin"
            android:contentDescription="@string/delete"
            android:onClick="deletePhoto"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordTitle"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:onClick="record"
            android:src="@drawable/rec"
            android:contentDescription="@string/recordStr" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:onClick="play"
            android:src="@drawable/play"
            android:contentDescription="@string/playRecStr"/>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/bin"
            android:contentDescription="@string/delete"
            android:onClick="deleteAudio"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:id="@+id/completeButton"
            android:src="@drawable/check"
            android:contentDescription="@string/complete_book"
            android:onClick="completeBooking"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="0dp"/>

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:id="@+id/favButton"
            android:src="@drawable/fav"
            android:contentDescription="@string/fav"
            android:onClick="addToFavs" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/uploading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadingStr"
        android:visibility="invisible"/>

</LinearLayout>
