<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.comp319.okd.libook.BrowseOptionsActivity">

    <LinearLayout
        android:id="@+id/photo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photoTitle"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/preview"
            android:contentDescription="@string/displayStr"
            android:onClick="display"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordTitle"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <ImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:onClick="play"
            android:src="@drawable/play"
            android:contentDescription="@string/playRecStr"/>

    </LinearLayout>

    <Button
        android:id="@+id/sitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sit"
        android:onClick="sit"/>

</LinearLayout>
