<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/lib"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.comp319.okd.libook.BookActivity">

    <TextView android:text="@string/header_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />
    
    <com.comp319.okd.libook.LibraryBookView
        android:id="@+id/libview"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@drawable/f0" />

    <Space
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/bookFloorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:src="@drawable/next"
        android:contentDescription="@string/complete_book"
        android:onClick="showOptions"
        style="?android:buttonBarButtonStyle"/>

</LinearLayout>
